ilmoittaudu-nappi tapahtumasivulle

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -73,7 +73,8 @@
     padding: 0.45rem;
     font-size: 1rem;
   }
-  input[type=submit] {
+  input[type=submit], .button {
+
     padding: 0.5rem 3rem;
     border-radius: 0.3rem;
     background-color: #975579;
@@ -98,4 +99,15 @@
   .info a {
     color: #975579;
   }
-       
+  
+  .flexarea {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 1rem;
+  }
+  
+  .button {
+    text-decoration: none;
+  }
+  
